5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1578_1332.log
== TEST (2019-03-30 16:35:33) 
-- CODE:
from math import *
aresta = 5
area = 3/2 * sqrt(3) * a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = 3/2 * sqrt(3) * a**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 16:35:56) 
-- CODE:
from math import *
aresta = 5
area = 3/2 * sqrt(3) * 5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 16:35:59) 
-- CODE:
from math import *
aresta = 5
area = 3/2 * sqrt(3) * 5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.16657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
